objects/ssot__FundingAward__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AwardNumber__c</fullName>
        <label>Award Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AwardeeId__c</fullName>
        <label>Awardee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetId__c</fullName>
        <label>Budget</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionDateTime__c</fullName>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FundingApplicationId__c</fullName>
        <label>Funding Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAwardStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAward_BudgetId_map_Budget_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAward_BudgetId_map_Budget_Id_N_1</label>
        <referenceTo>ssot__Budget__dlm</referenceTo>
        <relationshipLabel>FundingAward_BudgetId_map_Budget_Id_N_1</relationshipLabel>
        <relationshipName>FundingAward_BudgetId_map_Budget_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__FundingOpportunityId__c</fullName>
        <label>Funding Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Funding Award Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentFundingAwardId__c</fullName>
        <label>Parent Funding Award</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAwardAmount__c</fullName>
        <label>Total Award Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670492703_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAward_ProgramId_map_Program_I_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>FundingAward_ProgramId_map_Program_I_rel</relationshipLabel>
        <relationshipName>rel_1716670492703_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670494863_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAward_ParentFundingAwardId_ma_rel</label>
        <referenceTo>ssot__FundingAward__dlm</referenceTo>
        <relationshipLabel>FundingAward_ParentFundingAwardId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716670494863_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670507955_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAward_FundingOpportunityId_ma_rel</label>
        <referenceTo>ssot__FundingOpportunity__dlm</referenceTo>
        <relationshipLabel>FundingAward_FundingOpportunityId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716670507955_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>